log/build_2024-10-22_14-47-00/control_robot/stderr.log
  File "/home/vboxuser/Desktop/robot/install/control_robot/lib/python3.10/site-packages/control_robot/robot.py", line 34
    self.error = np.array([self.end_point[0], self.end_point[1])
                                                               ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['

